part 2 for the project
